--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -24,4 +24,4 @@ jobs:
           aws-region: ap-northeast-2  # 예: ap-northeast-2
 
       - name: Sync to S3
-        run: aws s3 sync ./web/index2.html s3://www.edumgt.co.kr
+        run: aws s3 sync ./web/ s3://www.edumgt.co.kr
